<resources>
    <string name="facebook_app_id">1376182409108734</string>
    <string name="maps_app_id">AIzaSyDeOnyvpvqE-rcP_uD_FXICkdFxm-TMfaw</string>


    <string name="app_name">SoSCasa</string>

    <string name="title_activity_perfil">Perfil</string>

    <string name="title_activity_cliente">@string/app_name</string>
    <string name="title_activity_novo_problema">Novo problema</string>
    <string name="title_activity_problema_cliente">Problema</string>
    <string name="title_activity_negociacao">Negociação</string>

    <string name="title_activity_profissional">@string/app_name</string>
    <string name="title_activity_problema_profissional">Problema</string>
    <string name="title_activity_negociacao_profissional">Negociação</string>
    <string name="title_activity_negociacoes_profissional">Negociações</string>


    <string name="menu_login">Log in</string>
    <string name="menu_logout">Sair</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="sign_up">Cadastre-se</string>
    <string name="sign_in">Entrar</string>


    <string name="title_location_permission">Ei, preciso saber onde vc tá</string>
    <string name="text_location_permission">Me ajude a te ajudar, onde vc tá?</string>
    <string name="ok">Ok</string>
    <string name="perfil">Meu perfil</string>
    <string name="negociacoes">Negociações</string>
    <string name="problemas">Problemas</string>
    <string name="aprovar">Aprovar</string>
    <string name="novo_problema">Novo problema</string>
    <string name="definir_valor">Definir valor</string>
    <string name="cancelar">Cancelar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="redefinir_senha">Redefinir senha</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="camporequerido">Preencha este campo!</string>
    <string name="login_error">Houve um problema ao fazer login</string>
    <string name="nome">Nome</string>
    <string name="celular">Celular</string>
    <string name="cadastrar_error">Houve um problema ao cadastrar</string>
    <string name="request_preco">Informe o preço da negociação</string>
    <string name="redefinir">Redefinir</string>
    <string name="redefinir_success_message">Foi enviado um email com as instruções de recuperação de senha</string>
    <string name="redefinir_success_title">Sucesso</string>
    <string name="redefinir_error_message">Ocorreu um problema ao enviar o email!</string>
    <string name="redefinir_error_title">Erro</string>
    <string name="sou_um_profissional">Sou um profissional</string>
    <string name="confirmacao_sou_profissional">Deseja realmente converter seu perfil para profissional?</string>
    <string name="atencao">Atenção</string>
    <string name="salvar">Salvar</string>
    <string name="area">Área</string>
    <string name="informe_seu_problema">Informe seu problema</string>
    <string name="selecione_uma_rea">Selecione uma área</string>
    <string name="negociar">Negociar</string>
    <string name="sem_permissao_localizacao">Sem permissão para achar sua localização!</string>
    <string name="problema_criado">Problema criado!</string>
    <string name="problema_cancelado">Problema cancelado!</string>
    <string name="perfil_atualizado">Perfil atualizado!</string>
    <string name="desfazer">Desfazer</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="deseja_aprovar_negociacao">Deseja aprovar esta negociação, seu problema foi resolvido?</string>
    <string name="deseja_cancelar_problema">Deseja cancelar este problema?</string>
    <string name="cliente">Cliente</string>
    <string name="valor">Valor</string>
    <string name="status">Status</string>
    <string name="mensagens">Mensagens</string>
    <string name="cliente2">Cliente</string>
    <string name="profissional">Profissional</string>
    <string name="data">Data</string>
    <string name="deseja_aprovar_problema">Deseja marcar este problema como concluído?</string>
    <string name="problema_aprovado">Problema aprovado!</string>
    <string name="negociacao">Negociação</string>
    <string name="descricao">Descrição</string>


</resources>
