<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.magicbox.soscasa.NovoProblemaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecione_uma_rea" />

        <Spinner
            android:id="@+id/spinner_novo_problema_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/to_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <AutoCompleteTextView
                android:id="@+id/text_novo_problema_descricao"
                android:layout_width="fill_parent"
                android:layout_height="100sp"
                android:gravity="top"
                android:hint="@string/informe_seu_problema"
                android:maxLines="3" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_novo_problema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_novo_problema"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#66ffffff"
        android:padding="130dp"
        android:visibility="gone" />

</RelativeLayout>
