<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="br.com.magicbox.soscasa.fragment.RegistrarFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFF">

            <AutoCompleteTextView
                android:id="@+id/text_registrar_nome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:textColor="#fff"
                android:hint="@string/nome" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFF">

            <AutoCompleteTextView
                android:id="@+id/text_registrar_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/email"
                android:maxLines="1"
                android:textColor="#fff"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFF">

            <AutoCompleteTextView
                android:id="@+id/text_registrar_celular"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/celular"
                android:maxLines="1"
                android:textColor="#fff"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#FFF">

            <AutoCompleteTextView
                android:id="@+id/text_registrar_senha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/senha"
                android:maxLines="1"
                android:textColor="#fff"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/text_registrar_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Cadastrar" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_registrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#66ffffff"
        android:visibility="gone"
        android:padding="130dp" />

</FrameLayout>
